--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/enzyme": "^3.10.5",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^26.0.13",
     "@types/node": "^14.6.4",
     "@types/react": "^16.9.49",
@@ -17,6 +19,8 @@
     "@types/react-window": "^1.8.2",
     "bootstrap": "^4.5.2",
     "dotenv": "^8.2.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.4",
     "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
