--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-window": "^1.8.2",
     "bootstrap": "^4.5.2",
     "dotenv": "^8.2.0",
+    "env-cmd": "^10.1.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.4",
     "moment": "^2.27.0",
@@ -33,6 +34,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build:prod": "env-cmd -f .env react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
