Added stock filter tests

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:prod": "env-cmd -f .env react-scripts start",
     "build": "react-scripts build",
     "build:prod": "env-cmd -f .env react-scripts build",
     "test": "react-scripts test",
