--- a/package.json
+++ b/package.json
@@ -3,44 +3,54 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.30",
-    "@fortawesome/free-solid-svg-icons": "^5.14.0",
-    "@fortawesome/react-fontawesome": "^0.1.11",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/enzyme": "^3.10.5",
-    "@types/enzyme-adapter-react-16": "^1.0.6",
-    "@types/jest": "^26.0.13",
-    "@types/node": "^14.6.4",
-    "@types/react": "^16.9.49",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-select": "^3.0.19",
-    "@types/react-window": "^1.8.2",
-    "bootstrap": "^4.5.2",
-    "dotenv": "^8.2.0",
+    "@craco/craco": "^7.1.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.11",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
+    "@types/react-window": "^1.8.5",
+    "assert": "^2.1.0",
+    "bootstrap": "^5.2.3",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
+    "dotenv": "^16.0.3",
     "env-cmd": "^10.1.0",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.4",
-    "moment": "^2.27.0",
-    "react": "^16.13.1",
-    "react-bootstrap": "^1.3.0",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3",
-    "react-select": "^3.1.0",
-    "react-window": "^1.8.5",
-    "typescript": "^4.0.2"
+    "https-browserify": "^1.0.0",
+    "moment": "^2.29.4",
+    "os-browserify": "^0.3.0",
+    "process": "^0.11.10",
+    "psl": "^1.15.0",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "react-select": "^5.7.0",
+    "react-window": "^1.8.8",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "typescript": "^4.9.4",
+    "url": "^0.11.4",
+    "yahoo-finance2": "^2.3.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "start:prod": "env-cmd -f .env react-scripts start",
-    "build": "react-scripts build",
-    "build:prod": "env-cmd -f .env react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "start:prod": "env-cmd -f .env craco start",
+    "build": "craco build",
+    "build:prod": "env-cmd -f .env craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
@@ -55,7 +65,6 @@
     ]
   },
   "devDependencies": {
-    "@types/node-sass": "^4.11.1",
-    "node-sass": "^4.14.1"
+    "sass": "^1.77.0"
   }
 }
